# oss-issue-scout

./: LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
oss_issue_scout/: __init__.py  cli.py  github_api.py  output.py  scoring.py  scoring_presets.py
tests/: test_cli.py  test_github_api.py  test_output.py  test_web_api.py
web/: api.py  index.html  start_web.bat
