[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-issue-scout"
version = "0.4.0"
description = "Find worthwhile open-source issues."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ruifeng Xue" }
]
dependencies = []

[project.optional-dependencies]
web = [
  "flask>=3.0",
  "flask-cors>=4.0",
]

[project.scripts]
oss-issue-scout = "oss_issue_scout.cli:main"

[tool.setuptools.packages.find]
include = ["oss_issue_scout*"]
